k8s-deployment/deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:latest
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: dashboard
              containerPort: 8080
              hostPort: 8080
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Equal"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/master"
          operator: "Equal"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik
spec:
  # We use NodePort instead of LoadBalancer to be able to access externally when using kind
  # see https://kind.sigs.k8s.io/docs/user/ingress
  type: NodePort
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik
spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: targon-pacifico
  namespace: default
  labels:
    app: targon-pacifico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targon-pacifico
  template:
    metadata:
      labels:
        app: targon-pacifico
    spec:
      containers:
        - name: targon-pacifico
          image: manifoldlabs/targon-pacifico:dev
          ports:
            - name: web
              containerPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: targon-modelo
  namespace: default
  labels:
    app: targon-modelo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targon-modelo
  template:
    metadata:
      labels:
        app: targon-modelo
    spec:
      containers:
        - name: targon-modelo
          image: manifoldlabs/targon-modelo:dev
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: targon-corona
  namespace: default
  labels:
    app: targon-corona
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targon-corona
  template:
    metadata:
      labels:
        app: targon-corona
    spec:
      containers:
        - name: targon-corona
          image: manifoldlabs/targon-corona:dev
---
apiVersion: v1
kind: Service
metadata:
  name: targon-pacifico
  namespace: default
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: targon-pacifico
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targon-hub-api-ingress
  namespace: default
spec:
  rules:
    - host: jugo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: targon-pacifico
                port:
                  number: 80
    - host: beers.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: targon-pacifico
                port:
                  number: 80
